# DarkHal_2.0

./: .gitignore  0.19.0  0.2.80  0.24.0  1.21.0  2.32.0  5.8.0  9.0.0  =0.2.3  =0.4.2  DEPENDENCY_INSTALLER_README.md  MANIFEST.in  MANUAL.md  README.md  REMOTE_CONTROL_README.md  __spy.py  agent_debug_tracer.py  agent_dhal_integration.py  agent_mode.py  build_all.bat  build_all.sh  build_all_platforms.py  build_cross_platform.py  build_linux_arm64.sh  build_linux_x64.sh  chat_templates.py  chess_tab.py  chess_window.py  convert_icon.py  dark_agent.py  download_manager.py  download_manager_fixed.py  finetune_tab.py  grouped_download_gui.py  grouped_download_manager.py  hf_downloader.py  install_mcp.py  launch_remote_control.bat  main.py  mcp_config.py  (+15 more)
.claude/agents/: aa.py  dhals-dev.md  hal.py  huggingface-multimodel-agent-dev.md
agent_dhal/: __init__.py  hal.py
agent_dhal/agentdhal_agentchat/: __init__.py  messages.py
agent_dhal/agentdhal_agentchat/agents/: _assistant_agent.py  _base_chat_agent.py  _code_executor_agent.py  _message_filter_agent.py  _society_of_mind_agent.py  _user_proxy_agent.py
agent_dhal/agentdhal_agentchat/base/: _chat_agent.py  _handoff.py  _task.py  _team.py  _termination.py
agent_dhal/agentdhal_agentchat/conditions/: _terminations.py
agent_dhal/agentdhal_agentchat/state/: _states.py
agent_dhal/agentdhal_agentchat/tools/: _agent.py  _task_runner_tool.py  _team.py
agent_dhal/agentdhal_agentchat/ui/: _console.py
agent_dhal/agentdhal_agentchat/utils/: _utils.py
agent_dhal/agentdhal_core/: __init__.py  _agent_instantiation.py  _agent_proxy.py  _agent_runtime.py  _base_agent.py  _cache_store.py  _closure_agent.py  _component_config.py  _constants.py  _image.py  _intervention.py  _routed_agent.py  _single_threaded_agent_runtime.py  _type_prefix_subscription.py  _type_subscription.py  logging.py
agent_dhal/agentdhal_core/_telemetry/: _constants.py  _genai.py  _tracing.py  _tracing_config.py
agent_dhal/agentdhal_core/code_executor/: _base.py  _func_with_reqs.py
agent_dhal/agentdhal_core/memory/: _base_memory.py  _list_memory.py
agent_dhal/agentdhal_core/model_context/: _buffered_chat_completion_context.py  _chat_completion_context.py  _head_and_tail_chat_completion_context.py  _token_limited_chat_completion_context.py  _unbounded_chat_completion_context.py
agent_dhal/agentdhal_core/tools/: _workbench.py  (+2 more)
agent_dhal/agentdhal_extensions/: __init__.py
engines/: llm_uci.py
llm_runtime/: __init__.py  chat_session.py  device_utils.py  loader_factory.py  model_router.py  registry.py  types.py  util_chat.py
llm_runtime/loaders/: autogptq_loader.py  awq_loader.py  exl2_loader.py  llamacpp_loader.py  transformers_loader.py
tools/: debug_torch.py  inspect_devices.py  test_gptq.py  test_meta_fp16.py
(+72 files in other folders)
